[package]
name = "rnnoise"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]

[[bin]]
name = "corr"
path = "src/corr.rs"

[dependencies]
libc = "0.2.71"
num-complex = "0.2.4"
once_cell = "1.4.0"
rustfft = "3.0.1"

[dev-dependencies]
byteorder = "1.3.4"
